app/Examples/SOLID/Bad/Notifications/MailNotification.php
<?php

declare(strict_types=1);

namespace App\Examples\SOLID\Bad\Notifications;

class MailNotification extends AbstractNotification
{
}
